# ipc-lib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: gtest.cmake
examples/: CMakeLists.txt  req_rep.cpp
include/ipc/: addr.hpp  error.hpp  fd.hpp  transport.hpp  unix_socket.hpp
tests/: .clang-tidy  CMakeLists.txt  dummy_test.cpp
